--- a/locales/zh/translation.json
+++ b/locales/zh/translation.json
@@ -1,6 +1,6 @@
 {
     "app": {
-        "title": "OTC-X-SWAP: P2P交易代幣的去中心化交易所和由程式開發DAO"
+        "title": "OTC-𝕏-SWAP: P2P交易代幣的去中心化交易所和由程式開發DAO"
     },
     "balances": {
         "addToTokenSet": "導入",
