--- a/locales/ukr/translation.json
+++ b/locales/ukr/translation.json
@@ -1,7 +1,7 @@
 {
     "app": {
-        "description": "OTC-X-SWAP забезпечує однорангову торгівлю.",
-        "title": "OTC-X-SWAP: однорангова децентралізована біржа торгівлі токенами та DAO розробників з відкритим кодом"
+        "description": "OTC-𝕏-SWAP забезпечує однорангову торгівлю.",
+        "title": "OTC-𝕏-SWAP: однорангова децентралізована біржа торгівлі токенами та DAO розробників з відкритим кодом"
     },
     "balances": {
         "addToTokenSet": "Імпортувати",
