--- a/locales/ro/translation.json
+++ b/locales/ro/translation.json
@@ -1,7 +1,7 @@
 {
     "app": {
-        "description": "OTC-X-SWAP susține tranzacționarea peer-to-peer.",
-        "title": "OTC-X-SWAP: peer-to-peer token Trading DEX și Dezvoltator Open Source DAO"
+        "description": "OTC-𝕏-SWAP susține tranzacționarea peer-to-peer.",
+        "title": "OTC-𝕏-SWAP: peer-to-peer token Trading DEX și Dezvoltator Open Source DAO"
     },
     "balances": {
         "addToTokenSet": "Importă",
