--- a/locales/nb/translation.json
+++ b/locales/nb/translation.json
@@ -1,7 +1,7 @@
 {
     "app": {
-        "description": "OTC-X-SWAP er et verktøy for P2P-handel.",
-        "title": "OTC-X-SWAP: Open Source  og desentralisert plattform for peer-to-peer handler"
+        "description": "OTC-𝕏-SWAP er et verktøy for P2P-handel.",
+        "title": "OTC-𝕏-SWAP: Open Source  og desentralisert plattform for peer-to-peer handler"
     },
     "balances": {
         "addToTokenSet": "Legg til",
