--- a/locales/en/translation.json
+++ b/locales/en/translation.json
@@ -1,7 +1,7 @@
 {
   "app": {
-    "description": "OTC-X-SWAP powers peer-to-peer trading.",
-    "title": "OTC-X-SWAP: Peer-to-peer Token Trading DEX "
+    "description": "OTC-𝕏-SWAP powers peer-to-peer trading.",
+    "title": "OTC-𝕏-SWAP: Peer-to-peer Token Trading DEX "
   },
   "balances": {
     "addToTokenSet": "Import",
